logs/curequests.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/curequests'...
Compiling './lib/python3.5/site-packages/curequests/adapters.py'...
***   File "./lib/python3.5/site-packages/curequests/adapters.py", line 54
    ):
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/curequests/connection_pool.py'...
***   File "./lib/python3.5/site-packages/curequests/connection_pool.py", line 41
    logger.debug(f'Connection {conn} closed')
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/curequests/cuhttp.py'...
***   File "./lib/python3.5/site-packages/curequests/cuhttp.py", line 215
    headers = [f'{self.method} {self.path} {self.version}']
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/curequests/models.py'...
***   File "./lib/python3.5/site-packages/curequests/models.py", line 33
    f'{type(self).__name__} not support synchronous context '
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/curequests/resource_pool.py'...
***   File "./lib/python3.5/site-packages/curequests/resource_pool.py", line 15
    return f'<{type(self).__name__} {self.key}>'
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/curequests/sessions.py'...
***   File "./lib/python3.5/site-packages/curequests/sessions.py", line 35
    f'{type(self).__name__} not support synchronous context '
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/curequests/utils.py'...
***   File "./lib/python3.5/site-packages/curequests/utils.py", line 14
    yield item
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/curequests-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/curio'...
Listing './lib/python3.5/site-packages/curio-0.8.egg-info'...
Listing './lib/python3.5/site-packages/httptools'...
Listing './lib/python3.5/site-packages/httptools/parser'...
Listing './lib/python3.5/site-packages/httptools-0.0.10.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/namedlist-1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
